<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bonjour maMadame ;)</string>
    <string name="title_activity_main">Bonjour maMadame ;)</string>
    <string name="deletecache">Delete cache</string>
    <string name="update">Update</string>
    <string name="next">Next page</string>
    <string name="previous">Previous page</string>
    <string name="all_madames">see all madames</string>
    <string name="delete_from_cache_and_update">Delete from cache and update</string>
    <string name="gotobeginning">Go to beginning</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_testactivity">Testactivity</string>

    <!-- Activity titles -->
    <string name="app_name">UniversalImageLoader</string>
    <string name="ac_name_image_list">Image List Example</string>
    <string name="ac_name_image_grid">Image Grid Example</string>
    <string name="ac_name_image_pager">Image Pager Example</string>
    <string name="ac_name_image_gallery">Image Gallery Example</string>
    <!-- Labels -->
    <string name="label_activity_examples">Activity Examples</string>
    <string name="menu_item_clear_memory_cache">Clear memory cache</string>
    <string name="menu_item_clear_disc_cache">Clear disc cache</string>
    <string name="button_image_list">Image List</string>
    <string name="button_image_grid">Image Grid</string>
    <string name="button_image_pager">Image Pager</string>
    <string name="button_image_gallery">Image Gallery</string>
    <!-- Content descriptions -->
    <string name="descr_image">Image</string>
    <string name="loadfrommemory">Cannot retrieve new madames\' urls from the server</string>
    <string name="noconnect">No connection</string>
    <string name="title_activity_settings">Settings Activity</string>

    
     <string name="new_ip">Enter the new ip</string>
     <string name="retrieving_latest_madames">Retrieving latest Madames...</string>
     <string name="loading">Loading...</string>
    
</resources>