<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <group>
       <!--  <item
            android:id="@+id/update"
            android:orderInCategory="100"
            android:title="@string/update"/>  -->
        <item
            android:id="@+id/previous_page"
            android:orderInCategory="1"
            android:title="@string/previous"/>
        <item
            android:id="@+id/next_page"
            android:orderInCategory="1"
            android:title="@string/next"/>
    </group>

    <item
        android:id="@+id/delete_from_cache_and_update"
        android:orderInCategory="5"
        android:title="@string/delete_from_cache_and_update"/>
    <item
        android:id="@+id/all_views"
        android:orderInCategory="5"
        android:title="@string/all_madames"/>
    <item
        android:id="@+id/firstPage"
        android:orderInCategory="5"
        android:title="@string/gotobeginning"/>
     <item
        android:id="@+id/httprequest"
        android:orderInCategory="5"
        android:title="http request"/>

</menu>